# aoc-rust

./: .gitignore  Cargo.toml  Readme.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: main.rs
src/framework/: mod.rs
src/year_2022/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs
src/year_2023/: day_01.rs  day_02.rs
