[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
chrono = "0.4.31"
proc-macro2 = "1.0.69"
quote = "1.0.28"
syn = { version = "2.0.18", features = ["extra-traits"] }
